--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js Reast APIs with Express, Sequelize & MySQL for the Pharmacy Management System",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
