--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
+    "react-hooks-global-state": "^2.0.0",
     "react-icons": "^4.6.0",
+    "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.10",
