--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.39.4",
     "react-hooks-global-state": "^2.0.0",
     "react-icons": "^4.6.0",
