--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.1",
+    "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.8.4",
