--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.1",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.2.0",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.8.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.39.4",
